--- a/templates/linechartmulti14/index.html
+++ b/templates/linechartmulti14/index.html
@@ -18,6 +18,7 @@
 Chart.defaults.global.responsive = true
 Chart.defaults.global.tooltips.backgroundColor="grey"
 Chart.defaults.global.maintainAspectRatio = true
+Chart.defaults.global.legend = false
 
 
 var ctx = document.getElementById("linechart14");
