--- a/templates/line11/index.html
+++ b/templates/line11/index.html
@@ -7,8 +7,8 @@
         <script src='https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.2/Chart.min.js'></script>
      <script src='https://cdnjs.cloudflare.com/ajax/libs/chartjs-plugin-annotation/0.5.5/chartjs-plugin-annotation.js'></script>
      <script src='https://cdn.rawgit.com/chartjs/Chart.js/master/samples/utils.js'></script>
-     <script src="/datavis/templates/Chart.Scatter-master"></script>
-     <script src="/Chart.Scatter.js"></script>
+     <script src="https://newyorkcitycouncil.github.io/datavis/templates/Chart.Scatter-master/Chart.Core.js"></script>
+     <script src="https://newyorkcitycouncil.github.io/datavis/templates/Chart.Scatter-master/Chart.Scatter.js"></script>
     </head>
     <body>
 
