Revert "update data"
This reverts commit 72fa407b34ff368225b3976d764ba1d2e4c71e78.

--- a/templates/linechartmulti15/index.html
+++ b/templates/linechartmulti15/index.html
@@ -30,14 +30,14 @@ var myChart = new Chart(ctx, {
         labels: ["Sep 2015","Oct 2015","Nov 2015","Dec 2015","Jan 2016","Feb 2016","Mar 2016","Apr 2016","May 2016","Jun 2016","Sep 2016","Oct 2016","Nov 2016","Dec 2016","Jan 2017","Feb 2017","Mar 2017","Apr 2017","May 2017","Jun 2017","Sep 2017","Oct 2017","Nov 2017","Dec 2017","Jan 2018","Feb 2018","Mar 2018","Apr 2018","May 2018","Jun 2018","Sep 2018"],
         datasets: [
             {
-              label: "Bus Breakdowns / Preventable Delays",
+              label: "Bus Breakdowns",
               fill: false,
               backgroundColor: "#BE4BDB",
               borderColor: "#BE4BDB",
               borderWidth: 0,
               hoverBackgroundColor: "#BE4BDB",
               hoverBorderColor: "#eeeeee",
-              data: [63,55,54,49,83,71,52,57,58,109,83,71,70,84,87,88,86,91,87,78,70,81,92,88,116,104,81,105,99,84,97]
+              data: [77,66,56,52,90,83,58,60,61,112,103,86,78,89,92,92,88,92,88,78,79,91,98,92,118,105,83,106,101,85,112]
             },
             {
               label: "Bus Breakdowns Trend",
@@ -49,7 +49,7 @@ var myChart = new Chart(ctx, {
               hoverBackgroundColor: "#DEA5ED",
               hoverBorderColor: "#eeeeee",
               lineTension: 0,
-              data: [62,63,64,65,66,67,68,69,70,71,74,76,77,78,79,80,81,82,83,84,87,88,89,91,92,93,94,95,96,97,100]
+              data: [68,69,71,72,73,74,75,76,77,78,81,82,83,84,85,86,87,88,89,90,93,94,95,96,97,98,99,100,101,103,106]
             },
             {
               label: "Expected Delay Times",
@@ -62,7 +62,7 @@ var myChart = new Chart(ctx, {
               hoverBorderColor: "#eeeeee",
               borderDash: [10,5],
               lineTension: 0,
-              data: [79,80,81,82,83,84,85,86,87,89,92,93,94,95,96,97,98,99,100,101,105,106,107,108,109,110,111,112,113,114,118]
+              data: [84,85,86,87,88,89,90,91,92,93,96,97,99,100,101,102,103,104,105,106,109,110,111,112,113,114,115,116,117,118,121]
             },
             {
               label: "Expected Delay Times",
@@ -75,7 +75,7 @@ var myChart = new Chart(ctx, {
               hoverBorderColor: "#eeeeee",
               borderDash: [10,5],
               lineTension: 0,
-              data: [44,45,46,47,48,50,51,52,53,54,57,58,59,60,61,62,63,65,66,67,70,71,72,73,74,75,76,77,78,80,83]
+              data: [53,54,55,56,57,58,59,60,61,62,65,66,67,68,69,71,71,73,74,75,78,79,80,81,82,83,84,85,86,87,90]
             }
 
           ]
