--- a/templates/doughnut24/index.html
+++ b/templates/doughnut24/index.html
@@ -23,7 +23,7 @@ var ctx = document.getElementById("doughnut24");
 var myChart = new Chart(ctx, {
     type: 'doughnut',
     data: {
-        labels: ["Heavy Traffic","Other","Mechanical Problem","Won't Start","Flat Tire","Weather Conditions","Late Return from Field Trip","Problem Run","Accident","Delayed by School"
+        labels: ["Heavy Traffic","Other","Mechanical Problem","Won't Start","Flat Tire","Weather Conditions","Late Return from Field Trip","Problematic Route","Accident","Delayed by School"
           ],
         datasets: [{
             label: 'Reason for Delay Sept 2015-Sept 2018',
