--- a/templates/barhorizontal19/index.html
+++ b/templates/barhorizontal19/index.html
@@ -77,7 +77,7 @@ var myChart = new Chart(ctx, {
         ],
         datasets: [{
             label: 'Average Minutes of Delay Per Reason Sept 2015 - Sept 2018',
-            backgroundColor:["#D05D4E","#F59F00","#228AE6","#12B886","#23417D","#82C91E","#A07952","#CACACA","#2F56A6","#BE4BDB"],
+            backgroundColor:["#D05D4E","#F59F00","#228AE6","#12B886","#23417D","#A07952","#82C91E","#CACACA","#2F56A6","#BE4BDB"],
             borderColor: "#eeeeee",
             borderWidth: 1,
             hoverBackgroundColor: "#9E9E9E",
