--- a/templates/linechartmulti14/index.html
+++ b/templates/linechartmulti14/index.html
@@ -31,10 +31,12 @@ var myChart = new Chart(ctx, {
         datasets: [
             {
               label: "Heavy Traffic",
+              pointBackgroundColor: ['red', "#82C91E", "#82C91E","#82C91E","#82C91E","#82C91E","#82C91E","#82C91E","#82C91E","#82C91E",'red',"#82C91E","#82C91E","#82C91E","#82C91E","#82C91E","#82C91E","#82C91E","#82C91E","#82C91E",'red',"#82C91E","#82C91E","#82C91E","#82C91E","#82C91E","#82C91E","#82C91E","#82C91E","#82C91E",'red'],
+              pointBorderColor:['red', "#82C91E", "#82C91E","#82C91E","#82C91E","#82C91E","#82C91E","#82C91E","#82C91E","#82C91E",'red',"#82C91E","#82C91E","#82C91E","#82C91E","#82C91E","#82C91E","#82C91E","#82C91E","#82C91E",'red',"#82C91E","#82C91E","#82C91E","#82C91E","#82C91E","#82C91E","#82C91E","#82C91E","#82C91E",'red'],
               fill: false,
               backgroundColor: "#82C91E",
               borderColor: "#82C91E",
-              borderWidth: 0,
+            //  borderWidth: 0,
               hoverBackgroundColor: "#82C91E",
               hoverBorderColor: "#eeeeee",
               data: [298,229,214,215,233,185,177,195,200,273,341,236,244,285,271,240,281,343,300,265,353,356,310,297,285,297,293,328,310,274,439]
@@ -50,8 +52,10 @@ var myChart = new Chart(ctx, {
               hoverBorderColor: "#eeeeee",
               lineTension: 0,
               data: [211,214,218,222,226,230,234,238,242,246,257,261,265,269,273,277,280,284,288,292,304,308,312,315,319,323,327,331,335,339,350]
-            },
-            {
+            }
+/*
+            ,
+          {
               label: "Expected Delay Times",
               fill: false,
               pointRadius: 1,
@@ -76,7 +80,7 @@ var myChart = new Chart(ctx, {
               borderDash: [10,5],
               lineTension: 0,
               data: [120,125,130,135,140,145,150,155,160,165,170,174,179,184,189,193,198,202,207,211,216,220,225,229,234,238,242,247,251,255,259]
-            }
+            }*/
 
           ]
         },
