--- a/templates/linechartmulti15/index.html
+++ b/templates/linechartmulti15/index.html
@@ -32,6 +32,8 @@ var myChart = new Chart(ctx, {
             {
               label: "Bus Breakdowns / Preventable Delays",
               fill: false,
+              pointBackgroundColor: ['red', "#BE4BDB", "#BE4BDB","#BE4BDB","#BE4BDB","#BE4BDB","#BE4BDB","#BE4BDB","#BE4BDB","#BE4BDB",'red',"#BE4BDB","#BE4BDB","#BE4BDB","#BE4BDB","#BE4BDB","#BE4BDB","#BE4BDB","#BE4BDB","#BE4BDB",'red',"#BE4BDB","#BE4BDB","#BE4BDB","#BE4BDB","#BE4BDB","#BE4BDB","#BE4BDB","#BE4BDB","#BE4BDB",'red'],
+              pointBorderColor:['red', "#BE4BDB", "#BE4BDB","#BE4BDB","#BE4BDB","#BE4BDB","#BE4BDB","#BE4BDB","#BE4BDB","#BE4BDB",'red',"#BE4BDB","#BE4BDB","#BE4BDB","#BE4BDB","#BE4BDB","#BE4BDB","#BE4BDB","#BE4BDB","#BE4BDB",'red',"#BE4BDB","#BE4BDB","#BE4BDB","#BE4BDB","#BE4BDB","#BE4BDB","#BE4BDB","#BE4BDB","#BE4BDB",'red'],
               backgroundColor: "#BE4BDB",
               borderColor: "#BE4BDB",
               borderWidth: 0,
@@ -50,7 +52,8 @@ var myChart = new Chart(ctx, {
               hoverBorderColor: "#eeeeee",
               lineTension: 0,
               data: [62,63,64,65,66,67,68,69,70,71,74,76,77,78,79,80,81,82,83,84,87,88,89,91,92,93,94,95,96,97,100]
-            },
+            }
+            /*,
             {
               label: "Expected Delay Times",
               fill: false,
@@ -76,7 +79,7 @@ var myChart = new Chart(ctx, {
               borderDash: [10,5],
               lineTension: 0,
               data: [44,45,46,47,48,50,51,52,53,54,57,58,59,60,61,62,63,65,66,67,70,71,72,73,74,75,76,77,78,80,83]
-            }
+            }*/
 
           ]
         },
