--- a/templates/barhorizontal25/index.html
+++ b/templates/barhorizontal25/index.html
@@ -76,8 +76,8 @@ var myChart = new Chart(ctx, {
     "Grades K-5", "Middle & High School"
         ],
         datasets: [{
-            label: 'Mins of Required PE',
-            backgroundColor: '#82C91E',
+            label: 'Mins of Required PE Weekly',
+            backgroundColor: '#6682ba',
             borderColor: "#eeeeee",
             borderWidth: 1,
             hoverBackgroundColor: "#9E9E9E",
