--- a/templates/barhorizontal25/index.html
+++ b/templates/barhorizontal25/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8" />
-        <title>PE Requirements for NYC Students</title>
+        <title>Students not getting required physical eduation 2017-2018</title>
 
         <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.1.3/Chart.min.js"></script>
 
@@ -10,7 +10,7 @@
     <body>
 
 
-<canvas id="barhorizontal24" max-width="400" height="400"></canvas>
+<canvas id="barhorizontal25" max-width="400" height="400"></canvas>
 <script>
 
 Chart.defaults.global.responsive = true
@@ -67,22 +67,21 @@ Chart.defaults.scale = {
 
 // Chart.defaults.global.defaultFontSize = 10
 
-var ctx = document.getElementById("barhorizontal24");
+var ctx = document.getElementById("barhorizontal25");
 
 var myChart = new Chart(ctx, {
     type: 'horizontalBar',
     data: {
-        labels: [
-    "Grades K-5", "Middle & High School"
+        labels: [ "Manhattan","Bronx","Brooklyn","Staten Island","Queens"
         ],
         datasets: [{
-            label: 'Mins of Required PE Weekly',
-            backgroundColor: '#6682ba',
+            label: 'Percentage of Students not Getting enough Physical Eduation 2017-2018',
+            backgroundColor: ["#8B0F15","#B02B32","#CE4C52","#F27C82","#FCABAF"],
             borderColor: "#eeeeee",
             borderWidth: 1,
             hoverBackgroundColor: "#9E9E9E",
             hoverBorderColor: "#eeeeee",
-            data: [120, 90]
+            data: [34,25,23,23,20]
         }]
     },
     options: {
@@ -90,7 +89,7 @@ var myChart = new Chart(ctx, {
         display: false,
         padding: 20,
         position: 'bottom',
-        text: 'Mins'
+        text: 'Percentage of Students not Getting enough Physical Eduation 2017-2018'
       },
       scales:{
         xAxes: [{
@@ -98,7 +97,7 @@ var myChart = new Chart(ctx, {
           ticks: {
             beginAtZero: true,
             callback: function(value) {
-              return value.toLocaleString('en-US')+' Mins';
+              return value.toLocaleString('en-US')+'%';
             }
           }
         }],
@@ -117,7 +116,7 @@ var myChart = new Chart(ctx, {
           */
           title: function(tooltipItems, data) {
 					// Pick first xLabel for now
-					var title = 'Average Response Time Days';
+					var title = 'Percentage of Students not Getting enough Physical Eduation 2017-2018';
 
 					if (tooltipItems.length > 0) {
 						if (tooltipItems[0].yLabel) {
@@ -131,7 +130,7 @@ var myChart = new Chart(ctx, {
 				},
 				label: function(tooltipItem, data) {
 					var datasetLabel = data.datasets[tooltipItem.datasetIndex].label || '';
-					return tooltipItem.xLabel.toLocaleString('en-US')+' Mins Required PE Weekly';
+					return tooltipItem.xLabel.toLocaleString('en-US')+'% of Students';
 				}
         }
       }
