--- a/templates/linechartmulti17/index.html
+++ b/templates/linechartmulti17/index.html
@@ -12,7 +12,7 @@
     <body>
 
 
-<canvas id="linechart17" width=auto max-height="500"></canvas>
+<canvas id="linechart17" width=auto max-height=auto></canvas>
 <script>
 
 Chart.defaults.global.responsive = true,
