--- a/templates/shuffle-homepage-demo/index.html
+++ b/templates/shuffle-homepage-demo/index.html
@@ -67,12 +67,12 @@
       <div class="picture-item__inner">
         <div class="aspect aspect--16x9">
           <div class="aspect__inner">
-            <img src="http://maps.googleapis.com/maps/api/streetview?size=300x190&location=40.866381,-73.923818&sensor=false&fov=110&key=AIzaSyAVlPrd_E8SDG07JzHEL43c-9WXLvb_9To" srcset="http://maps.googleapis.com/maps/api/streetview?size=300x190&location=40.866381,-73.923818&sensor=false&fov=110&key=AIzaSyAVlPrd_E8SDG07JzHEL43c-9WXLvb_9To 1x, http://maps.googleapis.com/maps/api/streetview?size=300x190&location=40.866381,-73.923818&sensor=false&fov=110&key=AIzaSyAVlPrd_E8SDG07JzHEL43c-9WXLvb_9To 2x"
+            <img src="https://maps.googleapis.com/maps/api/streetview?size=300x190&location=40.866381,-73.923818&sensor=false&fov=110&key=AIzaSyAVlPrd_E8SDG07JzHEL43c-9WXLvb_9To" srcset="https://maps.googleapis.com/maps/api/streetview?size=300x190&location=40.866381,-73.923818&sensor=false&fov=110&key=AIzaSyAVlPrd_E8SDG07JzHEL43c-9WXLvb_9To 1x, https://maps.googleapis.com/maps/api/streetview?size=300x190&location=40.866381,-73.923818&sensor=false&fov=110&key=AIzaSyAVlPrd_E8SDG07JzHEL43c-9WXLvb_9To 2x"
               alt="Principal: Camille Wallin // Address: 4862 BROADWAY, MANHATTAN NY 10034 // Neighborhood: Marble Hill-Inwood" />
           </div>
         </div>
         <div class="picture-item__details">
-          <figcaption class="picture-item__title"><a href="http://maps.google.com/maps?q=&layer=c&cbll=40.866381,-73.923818&sensor=false&fov=110&key=AIzaSyAVlPrd_E8SDG07JzHEL43c-9WXLvb_9To" target="_blank" rel="noopener">Muscota</a></figcaption>
+          <figcaption class="picture-item__title"><a href="https://maps.google.com/maps?q=&layer=c&cbll=40.866381,-73.923818&sensor=false&fov=110&key=AIzaSyAVlPrd_E8SDG07JzHEL43c-9WXLvb_9To" target="_blank" rel="noopener">Muscota</a></figcaption>
           <p class="picture-item__tags hidden@xs">district 1</p>
         </div>
         <p class="picture-item__description"><br><strong>Principal:</strong><br> Camille Wallin <br><br><strong>Address:</strong><br> 4862 BROADWAY, MANHATTAN NY 10034 <br><br> Neighborhood:<strong></strong><br> Marble Hill-Inwood</p>
