--- a/templates/shuffle-homepage-demo/index.html
+++ b/templates/shuffle-homepage-demo/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Shuffle homepage demo</title>
+  <title>Schools: Filter and Search</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
 
@@ -75,7 +75,7 @@
           <figcaption class="picture-item__title"><a href="https://maps.google.com/maps?q=&layer=c&cbll=40.866381,-73.923818&sensor=false&fov=110&key=AIzaSyAVlPrd_E8SDG07JzHEL43c-9WXLvb_9To" target="_blank" rel="noopener">Muscota</a></figcaption>
           <p class="picture-item__tags hidden@xs">district 1</p>
         </div>
-        <p class="picture-item__description"><br><strong>Friend:</strong><br> Camille Wallin <br><br><strong>Address:</strong><br> 4862 BROADWAY, MANHATTAN NY 10034 <br><br> Neighborhood:<strong></strong><br> Marble Hill-Inwood</p>
+        <p class="picture-item__description"><br><strong>Principal:</strong><br> Camille Wallin <br><br><strong>Address:</strong><br> 4862 BROADWAY, MANHATTAN NY 10034 <br><br> Neighborhood:<strong></strong><br> Marble Hill-Inwood</p>
       </div>
     </figure>
     <figure class="col-3@xs col-8@sm col-6@md picture-item picture-item--overlay" data-groups='["city"]' data-date-created="2016-07-01" data-title="Golden Gate Bridge">
