--- a/templates/shuffle-homepage-demo/index.html
+++ b/templates/shuffle-homepage-demo/index.html
@@ -18,7 +18,8 @@
   <div class="container">
   <div class="row">
     <div class="col-12@sm">
-      <h1>Shuffle homepage demo</h1>
+      <h1>NYC Schools</h1>
+      <h4>Filter and Search to Find Your School</h4>
     </div>
   </div>
 </div>
