--- a/templates/shuffle-homepage-demo/index.html
+++ b/templates/shuffle-homepage-demo/index.html
@@ -72,21 +72,36 @@
               alt="Principal: Camille Wallin // Address: 4862 BROADWAY, MANHATTAN NY 10034 // Neighborhood: Marble Hill-Inwood" />
           </div>
         </div>
+
         <div class="picture-item__details">
+
           <figcaption class="picture-item__title"><a href="https://maps.google.com/maps?q=&layer=c&cbll=40.866381,-73.923818&sensor=false&fov=110&key=AIzaSyAVlPrd_E8SDG07JzHEL43c-9WXLvb_9To" target="_blank" rel="noopener">Muscota</a></figcaption>
           <p class="picture-item__tags hidden@xs">district 1</p>
+
         </div>
-        <p class="picture-item__description"><br><strong>Principal:</strong><br> Camille Wallin <br><br><strong>Address:</strong><br> 4862 BROADWAY, MANHATTAN NY 10034 <br><br><strong>Neighborhood:</strong><br> Marble Hill-Inwood <strong><br><br>Grades:</strong><br>0K,01,02,03,04,05<br><br><strong>Passed Math Exam (School):</strong><br>93%<br><br><strong>Passed Math Exam (District Average):</strong><br>40%</strong><br></p>
-      </div>
+
+            <button class="collapsible">More Info</button>
+              <div class="content">
+              <p class="picture-item__description"><br><strong>Principal:</strong><br> Camille Wallin <br><br><strong>Address:</strong><br> 4862 BROADWAY, MANHATTAN NY 10034 <br><br><strong>Neighborhood:</strong><br> Marble Hill-Inwood <strong><br><br>Grades:</strong><br>0K,01,02,03,04,05<br><br><strong>Passed Math Exam (School):</strong><br>93%<br><br><strong>Passed Math Exam (District Average):</strong><br>40%</strong><br></p>
+            </div>
+    
+    </div>
     </figure>
-    <figure class="col-3@xs col-8@sm col-6@md picture-item picture-item--overlay" data-groups='["city"]' data-date-created="2016-07-01" data-title="Golden Gate Bridge">
+
+    <figure class="col-3@xs col-4@sm col-3@md picture-item picture-item--h2" data-groups='["city"]' data-date-created="2016-07-01" data-title="Golden Gate Bridge">
       <div class="picture-item__inner">
 
         <img src="https://images.unsplash.com/photo-1467348733814-f93fc480bec6?ixlib=rb-0.3.5&auto=format&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=584&h=329&fit=crop&s=2590c736835ec6555e952e19bb37f06e" srcset="https://images.unsplash.com/photo-1467348733814-f93fc480bec6?ixlib=rb-0.3.5&auto=format&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=584&h=329&fit=crop&s=2590c736835ec6555e952e19bb37f06e 1x, https://images.unsplash.com/photo-1467348733814-f93fc480bec6?ixlib=rb-0.3.5&auto=format&q=55&fm=jpg&dpr=2&crop=entropy&cs=tinysrgb&w=584&h=329&fit=crop&s=2590c736835ec6555e952e19bb37f06e 2x"
           alt="Looking down over one of the pillars of the Golden Gate Bridge to the roadside and water below" />
         <div class="picture-item__details">
+          <div class="aspect aspect--16x9">
+            <div class="aspect__inner">
           <figcaption class="picture-item__title"><a href="https://unsplash.com/photos/RRNbMiPmTZY" target="_blank" rel="noopener">Golden Gate Bridge</a></figcaption>
           <p class="picture-item__tags hidden@xs">city</p>
+        </div>
+        <button class="collapsible">More Info</button>
+          <div class="content">
+          <p class="picture-item__description"><br><strong>Principal:</strong><br> Camille Wallin <br><br><strong>Address:</strong><br> 4862 BROADWAY, MANHATTAN NY 10034 <br><br><strong>Neighborhood:</strong><br> Marble Hill-Inwood <strong><br><br>Grades:</strong><br>0K,01,02,03,04,05<br><br><strong>Passed Math Exam (School):</strong><br>93%<br><br><strong>Passed Math Exam (District Average):</strong><br>40%</strong><br></p>
         </div>
       </div>
     </figure>
