update tool tips

--- a/templates/bar12/index.html
+++ b/templates/bar12/index.html
@@ -132,7 +132,7 @@ var myChart = new Chart(ctx, {
       tooltips: {
         callbacks: {
           label: function(tooltipItem, data) {
-            return + data.datasets[tooltipItem.datasetIndex].data[tooltipItem.index].toLocaleString('en-US')+ ' Evictions Per Units';
+            return + data.datasets[tooltipItem.datasetIndex].data[tooltipItem.index].toLocaleString('en-US')+ ' Evictions Per Unit';
           },
         }
       }
