--- a/templates/linechartmulti18/index.html
+++ b/templates/linechartmulti18/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8" />
-        <title>311 Requests By Type</title>
+        <title>311 Requests By Method</title>
 
         <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.1.3/Chart.min.js"></script>
 
