--- a/templates/linechartmulti18/index.html
+++ b/templates/linechartmulti18/index.html
@@ -28,7 +28,7 @@ var myChart = new Chart(ctx, {
         labels: ["FY 14", "FY 15", "FY 16", "FY 17", "FY 18"],
         datasets: [
             {
-              label: "Calls",
+              label: "Phone Calls",
               fill: false,
               backgroundColor: "#82C91E",
               borderColor: "#82C91E",
