make data missing

--- a/templates/linechartmulti18/index.html
+++ b/templates/linechartmulti18/index.html
@@ -45,7 +45,7 @@ var myChart = new Chart(ctx, {
               borderWidth: 0,
               hoverBackgroundColor: "#BE4BDB",
               hoverBorderColor: "#eeeeee",
-              data: [0, 705, 1010, 1365, 1829]
+              data: [null, 705, 1010, 1365, 1829]
             },
             {
               label: "Website",
