tweak data and remove legend

--- a/templates/linechartmulti18/index.html
+++ b/templates/linechartmulti18/index.html
@@ -35,7 +35,7 @@ var myChart = new Chart(ctx, {
               borderWidth: 0,
               hoverBackgroundColor: "#82C91E",
               hoverBorderColor: "#eeeeee",
-              data: [21346, 21079, 18799, 20540, 20618]
+              data: [21346000, 21079000, 18799000, 20540000, 20618000]
             },
             {
               label: "Mobile App",
@@ -45,7 +45,7 @@ var myChart = new Chart(ctx, {
               borderWidth: 0,
               hoverBackgroundColor: "#BE4BDB",
               hoverBorderColor: "#eeeeee",
-              data: [null, 705, 1010, 1365, 1829]
+              data: [null, 705000, 1010000, 1365000, 1829000]
             },
             {
               label: "Website",
@@ -55,7 +55,7 @@ var myChart = new Chart(ctx, {
               borderWidth: 0,
               hoverBackgroundColor: "#EF9929",
               hoverBorderColor: "#eeeeee",
-              data: [5248, 9656, 13018, 17246, 19345]
+              data: [5248000, 9656000, 13018000, 17246000, 19345000]
             },
             {
               label: "Texting",
@@ -65,7 +65,7 @@ var myChart = new Chart(ctx, {
               borderWidth: 0,
               hoverBackgroundColor: "#EF9929",
               hoverBorderColor: "#eeeeee",
-              data: [234, 175, 156, 144,254]
+              data: [234000, 175000, 156000, 144000, 254000]
             }
           ]
         },
@@ -88,11 +88,7 @@ var myChart = new Chart(ctx, {
             }
           }
         }]
-      },
-
-    legend: {
-      display: true
-    }
+      }
 
     }
   });
