--- a/templates/linechartmulti18/index.html
+++ b/templates/linechartmulti18/index.html
@@ -50,20 +50,20 @@ var myChart = new Chart(ctx, {
             {
               label: "Website",
               fill: false,
-              backgroundColor: "#2F56A6",
-              borderColor: "#2F56A6",
+              backgroundColor: "#228AE6",
+              borderColor: "#228AE6",
               borderWidth: 0,
-              hoverBackgroundColor: "#EF9929",
+              hoverBackgroundColor: "#228AE6",
               hoverBorderColor: "#eeeeee",
               data: [5248000, 9656000, 13018000, 17246000, 19345000]
             },
             {
               label: "Texting",
               fill: false,
-              backgroundColor: "#2F56A6",
-              borderColor: "#2F56A6",
+              backgroundColor: "#F59F00",
+              borderColor: "#F59F00",
               borderWidth: 0,
-              hoverBackgroundColor: "#EF9929",
+              hoverBackgroundColor: "#F59F00",
               hoverBorderColor: "#eeeeee",
               data: [234000, 175000, 156000, 144000, 254000]
             }
