--- a/templates/bar12/index.html
+++ b/templates/bar12/index.html
@@ -98,12 +98,12 @@ var myChart = new Chart(ctx, {
         */
           {
             label: 'Residential Evictions 2018',
-            backgroundColor:["#82C91E","#12B886","#2F56A6","#F59F00","#228AE6"],
+            backgroundColor:["#82C91E","#228AE6","#F59F00","#2F56A6","#12B886"],
             borderColor: "#eeeeee",
             borderWidth: 0,
             hoverBackgroundColor: "#9E9E9E",
             hoverBorderColor: "#eeeeee",
-            data: [0.09,0.04,0.03,0.02,0.02]
+            data: [1.26,0.56,0.48,0.38,0.29]
           }],
       labels: [
               "Bronx","Manhattan","Staten Island", "Queens", "Brooklyn"
