--- a/templates/bar12/index.html
+++ b/templates/bar12/index.html
@@ -103,10 +103,10 @@ var myChart = new Chart(ctx, {
             borderWidth: 0,
             hoverBackgroundColor: "#9E9E9E",
             hoverBorderColor: "#eeeeee",
-            data: [1.26,0.56,0.48,0.38,0.29]
+            data: [1.3,0.6,0.5,0.4,0.3]
           }],
       labels: [
-              "Bronx","Manhattan","Staten Island", "Queens", "Brooklyn"
+              "Bronx","Brooklyn","Queens", "Staten Island", "Manhattan"
       ]
     },
     options: {
