--- a/templates/barhorizontal27/index.html
+++ b/templates/barhorizontal27/index.html
@@ -72,7 +72,7 @@ var ctx = document.getElementById("barhorizontal27");
 var myChart = new Chart(ctx, {
     type: 'horizontalBar',
     data: {
-        labels: ["Heat & Hot Water","Noise: Residential","Request Large Bulky Item Collection","Illegal Parking","Street Condition","Blocked Driveway","Street Light Condition","Water System","Unsanitary Condition","Noise",
+        labels: ["Heat & Hot Water","Noise: Residential","Large Bulky Item Collection","Illegal Parking","Street Condition","Blocked Driveway","Street Light Condition","Water System","Unsanitary Condition","Noise",
         ],
         datasets: [{
             label: 'Top 311 Request Types 2018',
