--- a/templates/barhorizontal23/index.html
+++ b/templates/barhorizontal23/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8" />
-        <title>Average Response Time by Issue Days Type Jan - Sept 2018</title>
+        <title>Average Response Time by Issue in Days 2018</title>
 
         <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.1.3/Chart.min.js"></script>
 
@@ -75,16 +75,16 @@ var myChart = new Chart(ctx, {
     type: 'horizontalBar',
     data: {
         labels: [
-    "Graffiti","For Hire Vehicle Complaint","Food Establishment","Taxi Complaint","Highway Sign - Missing","Drinking Water","Bike Rack Condition","Special Projects Inspection Team (SPIT)","New Tree Request","Interior Demo"
+"Dead/Dying Tree","For Hire Vehicle Complaint","Graffiti","New Tree Request","Food Establishment","Taxi Complaint","Illegal Tree Damage","Special Projects Inspection Team (SPIT)","Vacant Lot","School Maintenance","Plumbing"
         ],
         datasets: [{
-            label: 'Average Response Time by Issue Days Type Jan - Sept 2018',
+            label: 'Average Response Time by Issue in Days 2018',
             backgroundColor: '#82C91E',
             borderColor: "#eeeeee",
             borderWidth: 1,
             hoverBackgroundColor: "#9E9E9E",
             hoverBorderColor: "#eeeeee",
-            data: [84.0,64.9,60.2,42.6,40.2,39.4,35.2,34.5,33.0,32.7]
+            data: [89,72,69,62,60,51,47,41,37,36,32]
         }]
     },
     options: {
