updated data - top 311 issues

--- a/templates/barhorizontal27/index.html
+++ b/templates/barhorizontal27/index.html
@@ -72,7 +72,7 @@ var ctx = document.getElementById("barhorizontal27");
 var myChart = new Chart(ctx, {
     type: 'horizontalBar',
     data: {
-        labels: ["Heat & Hot Water","Noise: Residential","Large Bulky Item Collection","Illegal Parking","Street Condition","Blocked Driveway","Street Light Condition","Water System","Unsanitary Condition","Noise",
+        labels: ["All Noise","Heat/Hot Water ","Large Bulky Item Collection","Illegal Parking","Blocked Driveway","Street Condition","Unsanitary Condition","Street Light Condition","Water System","Plumbing"
         ],
         datasets: [{
             label: 'Top 311 Request Types 2018',
@@ -81,7 +81,7 @@ var myChart = new Chart(ctx, {
             borderWidth: 1,
             hoverBackgroundColor: "#9E9E9E",
             hoverBorderColor: "#eeeeee",
-            data: [120691,82808,62520,59316,52896,52834,31394,30234,28883,24656]
+            data: [436941,222938,180152,163151,137014,101723,82875,73916,73129,58468]
         }]
     },
     options: {
