--- a/templates/barhorizontal27/index.html
+++ b/templates/barhorizontal27/index.html
@@ -26,7 +26,7 @@ Chart.defaults.scale = {
 
 		// grid line settings
 		gridLines: {
-			display: false,
+			display: true,
 			color: "rgba(0, 0, 0, 0.1)",
 			lineWidth: 1,
 			drawBorder: true,
