--- a/templates/linechartmulti19/index.html
+++ b/templates/linechartmulti19/index.html
@@ -28,7 +28,7 @@ var myChart = new Chart(ctx, {
         labels: ["2011","2012","2013","2014","2015","2016","2017","2018"],
         datasets: [
             {
-              label: "Altice",
+              label: "Optimum",
               fill: false,
               backgroundColor: "#82C91E",
               borderColor: "#82C91E",
