--- a/templates/doughnut29/index.html
+++ b/templates/doughnut29/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8" />
-        <title>Cable Internet Service Providers</title>
+        <title>Commercial Eviction by Borough 2018</title>
 
         <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.1.3/Chart.min.js"></script>
 
@@ -23,15 +23,15 @@ var ctx = document.getElementById("doughnut26");
 var myChart = new Chart(ctx, {
     type: 'doughnut',
     data: {
-        labels: ["Spectrum","Optimum","RCN","Comcast","Spectrotel"],
+        labels: ["Manhattan","Brooklyn","Queens","Bronx","Staten Island"],
         datasets: [{
-            label: 'Cable Internet Service Providers',
+            label: 'Commcercial Eviction by Borough, 2018',
             backgroundColor:["#12B886","#228AE6","#F59F00","#82C91E","#2F56A6"],
             borderColor: "#eeeeee",
             borderWidth: 1,
             hoverBackgroundColor: "#9E9E9E",
             hoverBorderColor: "#eeeeee",
-            data: [65.61,31.73,7.02,0.05,0.04]
+            data: [678,456,407,280,32]
         }]
     }
     ,
