--- a/templates/histogram/index.html
+++ b/templates/histogram/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8" />
-        <title>Stop Signs 311 Closed</title>
+        <title>Days to Close Stop Sign Complaints</title>
 
         <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.1.3/Chart.min.js"></script>
 
@@ -16,6 +16,8 @@
 Chart.defaults.global.responsive = true
 Chart.defaults.global.legend.display= false
 Chart.defaults.global.maintainAspectRatio = false
+Chart.defaults.global.title = true
+
 Chart.defaults.scale = {
 		display: true,
 		position: "left",
@@ -159,8 +161,7 @@ var myBarChart = Chart.Bar(canvas, {
         barPercentage: 1.0,
         ticks: {
         autoSkip: true,
-        maxTicksLimit: 20
-    }
+        maxTicksLimit: 20,
       }],
       yAxes: [{
         display: true,
@@ -173,7 +174,7 @@ var myBarChart = Chart.Bar(canvas, {
       }]
     },
     tooltips: {
-      callbacks: {
+      callbacks: {,
         label: function(tooltipItem, data) {
           return +  data.datasets[tooltipItem.datasetIndex].data[tooltipItem.index].toLocaleString('en-US')+ ' Cases';
         },
