--- a/templates/stackedbar14/index.html
+++ b/templates/stackedbar14/index.html
@@ -70,53 +70,53 @@ var myChart = new Chart(ctx, {
 
     data: {
         labels: [
-                "TLC","NYPD","HPD","DSNY","DPR","DOT","DOHMH","DOF","DOB","DEP"
+                "DEP","DOB","DOF","DOHMH","DOT","DPR","DSNY","HPD","NYPD","TLC"
               ],
         datasets: [
           {
-            label: 'Did Not Observe',
+            label: 'Ambiguous',
             backgroundColor:"#228AE6",
             borderColor: "#eeeeee",
             borderWidth: 0,
             hoverBackgroundColor: "#CACACA",
             hoverBorderColor: "#eeeeee",
-            data: [0,50.6,19.9,20.8,10.5,4.7,0.1,0.0,0.0,49.2]
+            data: [1.0,32.0,87.0,0.0,46.0,0.0,0.0,6.0,5.0,0.0]
           },
           {
-            label: 'Fixed',
+            label: 'Did Not Observe',
             backgroundColor: "#82C91E",
             borderColor: "#eeeeee",
             borderWidth: 0,
             hoverBackgroundColor: "#CACACA",
             hoverBorderColor: "#eeeeee",
-            data: [0,29.1,5.4,50.3,48.9,33.9,0.5,6.9,4.2,23.2]
+            data: [34.0,2.0,0,0.0,4.0,11.0,11.0,18.0,51.0,0.0]
           },
           {
-            label: 'Ambiguous',
+            label: 'Duplicate',
             backgroundColor: "#BE4BDB",
             borderColor: "#eeeeee",
             borderWidth: 0,
             hoverBackgroundColor: "#CACACA",
             hoverBorderColor: "#eeeeee",
-            data: [0,5.5,4.5,0.0,0.0,37.2,0.0,91.3,42.7,1.8]
+            data: [23.0,0,0,0.0,4.0,0.0,0.0,14.0,0.0,0.0]
           },
           {
-            label: 'No Action Taken',
+            label: 'Fixed',
             backgroundColor: "#D05D4E",
             borderColor: "#eeeeee",
             borderWidth: 0,
             hoverBackgroundColor: "#CACACA",
             hoverBorderColor: "#eeeeee",
-            data: [0,13.5,8.3,1.7,28.1,10.5,0.0,0.0,35.8,15.5]
+            data: [18.0,4.0,8.0,0.0,26.0,46.0,31.0,4.0,28.0,0.0]
           },
           {
-            label: 'No Violation',
+            label: 'No Action Taken',
             backgroundColor: "#F59F00",
             borderColor: "#eeeeee",
             borderWidth: 0,
             hoverBackgroundColor: "#CACACA",
             hoverBorderColor: "#eeeeee",
-            data: [0,0.0,38.2,21.8,0.0,0.0,0.4,0.0,0.0,0.6]
+            data: [13.0,33.0,0,0.0,9.0,30.0,10.0,39.0,14.0,0.0]
           },
           {
             label: 'Ongoing',
@@ -125,16 +125,25 @@ var myChart = new Chart(ctx, {
             borderWidth: 0,
             hoverBackgroundColor: "#CACACA",
             hoverBorderColor: "#eeeeee",
-            data: [100,0.5,2.5,1.1,9.2,12.0,98.7,1.8,0.0,8.4]
+            data: [3.0,11.0,2.0,99.0,10.0,8.0,1.0,2.0,0.0,99.0]
           },
           {
-            label: 'Violations Issued',
+            label: 'Other',
             backgroundColor: "#12B886",
             borderColor: "#eeeeee",
             borderWidth: 0,
             hoverBackgroundColor: "#CACACA",
             hoverBorderColor: "#eeeeee",
-            data: [0.0,0.0,21.2,4.2,0.0,0.0,0.1,0.0,17.3,1.2]
+            data: [6.0,1.0,4.0,0.0,1.0,2.0,45.0,0.0,0.0,1.0]
+          },
+          {
+            label: 'Violations Issued',
+            backgroundColor: "#2F56A6",
+            borderColor: "#eeeeee",
+            borderWidth: 0,
+            hoverBackgroundColor: "#CACACA",
+            hoverBorderColor: "#eeeeee",
+            data: [1.0,15.0,0,0.0,0.0,0.0,2.0,17.0,0.0,0.0]
           },
           {
             label: 'Wrong Agency',
@@ -143,7 +152,7 @@ var myChart = new Chart(ctx, {
             borderWidth: 0,
             hoverBackgroundColor: "#CACACA",
             hoverBorderColor: "#eeeeee",
-            data: [0,0.8,0.0,0.2,3.3,1.8,0.2,0.0,0.0,0.1]
+            data: [1.0,2.0,0,0.0,1.0,3.0,0.0,0.0,1.0,0.0]
           }
       ]
 
