--- a/templates/histogram/index.html
+++ b/templates/histogram/index.html
@@ -176,9 +176,11 @@ var myBarChart = Chart.Bar(canvas, {
     },
     tooltips: {
       callbacks: {
+         title: function (tooltipItem, data) { return data.labels[tooltipItem[0].index]+' Days to Close'; },
         label: function(tooltipItem, data) {
-          return +  data.datasets[tooltipItem.datasetIndex].data[tooltipItem.index].toLocaleString('en-US')+ ' Cases';
-        },
+           return +  data.datasets[tooltipItem.datasetIndex].data[tooltipItem.index].toLocaleString('en-US')+ ' Cases';
+
+          }
       }
     }
   }
