--- a/templates/histogram/index.html
+++ b/templates/histogram/index.html
@@ -185,7 +185,12 @@ var myBarChart = Chart.Bar(canvas, {
     }
   }
 });
-
+canvas.style.height = "100vh";
+canvas.style.width = "100vw";
+window.addEventListener("resize",function(){
+  canvas.style.height = "100vh";
+  canvas.style.width = "100vw";
+});
 </script>
     </body>
 </html>
