changed hover type

--- a/templates/stackedbar14/index.html
+++ b/templates/stackedbar14/index.html
@@ -78,8 +78,9 @@ var myChart = new Chart(ctx, {
             backgroundColor:"#228AE6",
             borderColor: "#eeeeee",
             borderWidth: 0,
-            hoverBackgroundColor: "#CACACA",
-            hoverBorderColor: "#eeeeee",
+            hoverBackgroundColor: "#228AE6",
+            hoverBorderColor: "#FFFFFF",
+            hoverBorderWidth: 2,
             data: [5,4,74,0,46,0,45,6,5,1]
           },
           {
@@ -87,8 +88,9 @@ var myChart = new Chart(ctx, {
             backgroundColor: "#82C91E",
             borderColor: "#eeeeee",
             borderWidth: 0,
-            hoverBackgroundColor: "#CACACA",
-            hoverBorderColor: "#eeeeee",
+            hoverBackgroundColor: "#82C91E",
+            hoverBorderColor: "#FFFFFF",
+            hoverBorderWidth: 2,
             data: [34,21,0,0,4,11,11,18,51,0]
           },
           {
@@ -96,8 +98,9 @@ var myChart = new Chart(ctx, {
             backgroundColor: "#BE4BDB",
             borderColor: "#eeeeee",
             borderWidth: 0,
-            hoverBackgroundColor: "#CACACA",
-            hoverBorderColor: "#eeeeee",
+            hoverBackgroundColor: "#BE4BDB",
+            hoverBorderColor: "#FFFFFF",
+            hoverBorderWidth: 2,
             data: [23,0,0,0,4,0,0,14,0,0]
           },
           {
@@ -105,8 +108,9 @@ var myChart = new Chart(ctx, {
             backgroundColor: "#D05D4E",
             borderColor: "#eeeeee",
             borderWidth: 0,
-            hoverBackgroundColor: "#CACACA",
-            hoverBorderColor: "#eeeeee",
+            hoverBackgroundColor: "#D05D4E",
+            hoverBorderColor: "#FFFFFF",
+            hoverBorderWidth: 2,
             data: [19,16,21,0,26,46,31,4,28,0]
           },
           {
@@ -114,8 +118,9 @@ var myChart = new Chart(ctx, {
             backgroundColor: "#F59F00",
             borderColor: "#eeeeee",
             borderWidth: 0,
-            hoverBackgroundColor: "#CACACA",
-            hoverBorderColor: "#eeeeee",
+            hoverBackgroundColor: "#F59F00",
+            hoverBorderColor: "#FFFFFF",
+            hoverBorderWidth: 2,
             data: [13,33,0,0,9,30,10,39,14,0]
           },
           {
@@ -123,8 +128,9 @@ var myChart = new Chart(ctx, {
             backgroundColor: "#A07952",
             borderColor: "#eeeeee",
             borderWidth: 0,
-            hoverBackgroundColor: "#CACACA",
-            hoverBorderColor: "#eeeeee",
+            hoverBackgroundColor: "#A07952",
+            hoverBorderColor: "#FFFFFF",
+            hoverBorderWidth: 2,
             data: [3,11,2,99,10,8,1,2,0,99]
           },
           {
@@ -132,8 +138,9 @@ var myChart = new Chart(ctx, {
             backgroundColor: "#12B886",
             borderColor: "#eeeeee",
             borderWidth: 0,
-            hoverBackgroundColor: "#CACACA",
-            hoverBorderColor: "#eeeeee",
+            hoverBackgroundColor: "#12B886",
+            hoverBorderColor: "#FFFFFF",
+            hoverBorderWidth: 2,
             data: [1,0,4,0,1,2,0,0,0,0]
           },
           {
@@ -141,8 +148,9 @@ var myChart = new Chart(ctx, {
             backgroundColor: "#2F56A6",
             borderColor: "#eeeeee",
             borderWidth: 0,
-            hoverBackgroundColor: "#CACACA",
-            hoverBorderColor: "#eeeeee",
+            hoverBackgroundColor: "#2F56A6",
+            hoverBorderColor: "#FFFFFF",
+            hoverBorderWidth: 2,
             data: [1,15,0,0,0,0,2,17,0,0]
           },
           {
@@ -150,8 +158,9 @@ var myChart = new Chart(ctx, {
             backgroundColor: "#2F56A6",
             borderColor: "#eeeeee",
             borderWidth: 0,
-            hoverBackgroundColor: "#CACACA",
-            hoverBorderColor: "#eeeeee",
+            hoverBackgroundColor: "#2F56A6",
+            hoverBorderColor: "#FFFFFF",
+            hoverBorderWidth: 2,
             data: [0,0,0,0,1,3,0,0,1,0]
           }
       ]
