--- a/templates/histogram/index.html
+++ b/templates/histogram/index.html
@@ -16,7 +16,7 @@
 Chart.defaults.global.responsive = true
 Chart.defaults.global.legend.display= false
 Chart.defaults.global.maintainAspectRatio = false
-Chart.defaults.global.title = true
+Chart.defaults.global.title.display = true
 
 Chart.defaults.scale = {
 		display: true,
@@ -155,6 +155,12 @@ var myBarChart = Chart.Bar(canvas, {
     }]
   },
   options: {
+    title: {
+            display: true,
+            text: 'Days to Close Stop Sign Complaints',
+            position: 'bottom',
+            fontFamily: 'open sans'
+        },
     scales: {
       xAxes: [{
         categoryPercentage: 1.0,
@@ -176,7 +182,6 @@ var myBarChart = Chart.Bar(canvas, {
     },
     tooltips: {
       callbacks: {
-         title: function (tooltipItem, data) { return data.labels[tooltipItem[0].index]+' Days to Close'; },
         label: function(tooltipItem, data) {
            return +  data.datasets[tooltipItem.datasetIndex].data[tooltipItem.index].toLocaleString('en-US')+ ' Cases';
 
