--- a/templates/histogram/index.html
+++ b/templates/histogram/index.html
@@ -159,6 +159,8 @@ var myBarChart = Chart.Bar(canvas, {
             display: true,
             text: 'Days to Close Stop Sign Complaints',
             position: 'bottom',
+            fontFamily: 'open sans',
+            fontStyle: 'book'
         },
     scales: {
       xAxes: [{
