--- a/templates/histogram/index.html
+++ b/templates/histogram/index.html
@@ -10,7 +10,7 @@
     <body>
 
 
-<canvas id="myChart" width="400" height="300"></canvas>
+<canvas id="myChart" width=auto height="250"></canvas>
 <script>
 
 Chart.defaults.global.responsive = true
