--- a/templates/barhorizontal27/index.html
+++ b/templates/barhorizontal27/index.html
@@ -10,7 +10,7 @@
     <body>
 
 
-<canvas id="barhorizontal27" max-width="400" height="400"></canvas>
+<canvas id="barhorizontal27" width="400" height="400"></canvas>
 <script>
 
 Chart.defaults.global.responsive = true
