--- a/templates/bar16/index.html
+++ b/templates/bar16/index.html
@@ -10,7 +10,7 @@
     <body>
 
 
-<canvas id="bar9" max-width="400" height="400"></canvas>
+<canvas id="bar9" width="600" height="400"></canvas>
 <script>
 
 Chart.defaults.global.responsive = true
