--- a/templates/barhorizontal23/index.html
+++ b/templates/barhorizontal23/index.html
@@ -10,12 +10,12 @@
     <body>
 
 
-<canvas id="barhorizontal23" max-width="400" height="400"></canvas>
+<canvas id="barhorizontal23" width="600" height="400"></canvas>
 <script>
 
 Chart.defaults.global.responsive = true
 Chart.defaults.global.legend.display= false
-Chart.defaults.global.maintainAspectRatio = false
+Chart.defaults.global.maintainAspectRatio = true
 Chart.defaults.global.title = true
 
 
