--- a/templates/stackedbar14/index.html
+++ b/templates/stackedbar14/index.html
@@ -10,12 +10,12 @@
     <body>
 
 
-<canvas id="stackedbar13" max-width="400" max="400"></canvas>
+<canvas id="stackedbar13" width="600" max="400"></canvas>
 <script>
 
 Chart.defaults.global.responsive = true
 Chart.defaults.global.legend.display = true
-Chart.defaults.global.legend.labels.padding = 20
+// Chart.defaults.global.legend.labels.padding = 20
 Chart.defaults.global.maintainAspectRatio = true
 
 Chart.defaults.scale = {
