--- a/templates/stackedbar14/index.html
+++ b/templates/stackedbar14/index.html
@@ -10,7 +10,7 @@
     <body>
 
 
-<canvas id="stackedbar13" width="400" max="400"></canvas>
+<canvas id="stackedbar13" width="700" height="400"></canvas>
 <script>
 
 Chart.defaults.global.responsive = true
