--- a/templates/histogram/index.html
+++ b/templates/histogram/index.html
@@ -10,12 +10,12 @@
     <body>
 
 
-<canvas id="myChart" width=auto height="250"></canvas>
+<canvas id="myChart" width="700" height="400"></canvas>
 <script>
 
 Chart.defaults.global.responsive = true
 Chart.defaults.global.legend.display= false
-Chart.defaults.global.maintainAspectRatio = false
+Chart.defaults.global.maintainAspectRatio = true
 Chart.defaults.global.title.display = true
 
 Chart.defaults.scale = {
