--- a/templates/linechartmulti20/index.html
+++ b/templates/linechartmulti20/index.html
@@ -104,7 +104,7 @@ var myChart = new Chart(ctx, {
           ticks: {
             beginAtZero:true,
             callback: function(value) {
-              return '$' + value.toLocaleString('en-US') + ' Million';
+              return '$' + value.toLocaleString('en-US');
             }
           }
         }]
