removed grid lines

--- a/templates/barhorizontal28/index.html
+++ b/templates/barhorizontal28/index.html
@@ -26,7 +26,7 @@ Chart.defaults.scale = {
 
 		// grid line settings
 		gridLines: {
-			display: true,
+			display: false,
 			color: "rgba(0, 0, 0, 0.1)",
 			lineWidth: 1,
 			drawBorder: true,
